# xtensor

./: .gitignore  pyproject.toml
src/xtensor/: __init__.py  dataset.py  datatensor.py
tests/: conftest.py  test_construction.py  test_conversions.py  test_dataset.py  test_manipulation.py  test_operations.py  test_plan.md  test_reductions.py  test_selection.py
